# Werby

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: main.py
app/api/: deps.py
app/api/v1/: routes.py
app/core/: config.py  exceptions.py  logging.py
app/schemas/: rag.py
app/services/: document_processor.py  llm_service.py  rag_service.py  vector_store.py
app/services/providers/: base.py  local_embeddings.py  ollama_provider.py  openai_provider.py
frontend/: streamlit_app.py
scripts/: ingest.py
tests/: conftest.py  test_document_processor.py  test_llm_prompts.py  test_providers.py  test_rag_service.py
